--- a/src/servicomBundle/Resources/views/Default/index.html.twig
+++ b/src/servicomBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,22 @@
-Hello World!
+{% extends 'base.html.twig' %}
+{% block body %}
+<!-- Right side column. Contains the navbar and content of the page -->
+<aside class="right-side">
+    <!-- Main content -->
+    <section class="content-header" style="padding-left: 20px">
+
+        <h4>Tableau de bord</h4>
+        <ol class="breadcrumb">
+            <li class="active">
+                <a href="#">
+                    <i class="livicon" data-name="home" data-size="16" data-color="#333" data-hovercolor="#333"></i>
+                    Home
+                </a>
+            </li>
+        </ol>
+    </section>
+    <section class="content">
+
+    </section>
+    </aside>
+{% endblock %}
