--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,7 +6,9 @@
 
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
 
-    <title>{% block title %}ServiCommercial{% endblock %}</title>
+    <title>{% block title %}Espace Commercial | Servicom
+
+            {% endblock %}</title>
         {% block stylesheets %}
             <link href="{{ asset('bundles/app/css/bootstrap.min.css') }}" rel="stylesheet" type="text/css" />
             <!-- font Awesome -->
@@ -21,6 +23,7 @@
             <link rel="stylesheet" media="all" href="{{ asset('bundles/app/vendors/jvectormap/jquery-jvectormap.css') }}" />
             <link rel="stylesheet" href="{{ asset('bundles/app/vendors/animate/animate.min.css') }}">
             <link rel="stylesheet" href="{{ asset('bundles/app/css/only_dashboard.css') }}" />
+                <link rel="shortcut icon" href="http://www.servi.com.tn/wp-content/uploads/2017/03/2-02.png">
         {% endblock %}
 
     </head>
