--- a/src/servicomBundle/Resources/views/pages/profile_commercial.html.twig
+++ b/src/servicomBundle/Resources/views/pages/profile_commercial.html.twig
@@ -63,7 +63,7 @@
                                             <div class="col-md-4">
                                                 <div class="fileinput fileinput-new" data-provides="fileinput">
                                                     <div class="fileinput-new thumbnail img-file">
-                                                        <img src="{{ asset('images/products/'~userf.imageName) }}" style="padding-left: 40px" class="img-circle img-responsive pull-left"  alt="riot">
+                                                        <img src="{{ asset('images/products/'~userf.imageName) }}" style=""   alt="riot">
                                                         </div>
 
 
@@ -188,6 +188,7 @@
                                                 <input type="reset" class="btn btn-default hidden-xs" value="Remettre"></div>
                                         </div>
                                     {{ form_end(form) }}
+
 
                                 </div>
                             </div>
